--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
         "@prisma/client": "^5.13.0",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "express-validator": "^7.2.1",
+        "multer": "^2.0.1",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.0"
     },
